@@ -2,6 +2,8 @@ Mahout Change Log
 
 Release 1.0 - unreleased
 
+  MAHOUT-1571: Functional Views are not serialized as dense/sparse correctly (dlyubimov)
+
   MAHOUT-1566: (Experimental) Regular ALS factorizer with conversion tests, optimizer enhancements and bug fixes (dlyubimov)
 
   MAHOUT-1537: Minor fixes to spark-shell (Anand Avati via dlyubimov)
